--- a/index.html
+++ b/index.html
@@ -1,13 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/main.js"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/png" href="./assets/star.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script type="module" src="js/script.js" defer></script>
+  <link rel="stylesheet" href="css/style.css">
+  <title>sushi-Resturant</title>
+</head>
+
+<body>
+  <header>
+
+
+    <nav class="header__nav">
+      <div class="header__logo">
+        <h4>SUSHIMAN</h4>
+        <div class="header__logo-overlay"></div>
+      </div>
+      <ul class="header__menu">
+        <li><a href="#">Menu</a></li>
+        <li><a href="#">Food</a></li>
+        <li><a href="#">Services</a></li>
+        <li><a href="#">About us</a></li>
+        <li><img src="assets/search.svg" alt="search"></li>
+      </ul>
+      <ul class="header__menu-mobile">
+        <li><img src="assets/menu.svg" alt="menu"></li>
+      </ul>
+    </nav>
+  </header>
+
+
+
+
+
+</body>
+
 </html>
