adding sections files and hero section structure

--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
 </head>
 
 <body>
+
   <header>
-
-
     <nav class="header__nav">
       <div class="header__logo">
         <h4>SUSHIMAN</h4>
@@ -31,6 +30,27 @@
       </ul>
     </nav>
   </header>
+
+  <section class="hero">
+    <div class="hero-image">
+      <!-- <img src="assets/sushi-1.png" alt="sushi with shopsticks"> -->
+      <!-- search for sushi japanese kanji words to get-->
+      <div class="hero-image__overlay"></div>
+    </div>
+    <div class="hero-content">
+      <div class="hero-content-info">
+        <h1> fell the taste of the japanese food</h1>
+        <p>feel the taste of the most popular japanese food from anywhere and anytime.</p>
+        <div class="hero-content__buttons">
+          <button type="button" class="hero-content__oreder">order now</button>
+          <button type="button" class="hero-content__paly">
+            <img src="assets/play-circle.svg" alt="play">
+          </button>
+        </div>
+      </div>
+    </div>
+
+  </section>
 
 
 
